--- a/packages/website/src/sass/layout/_section.sass
+++ b/packages/website/src/sass/layout/_section.sass
@@ -6,5 +6,9 @@
   &::after
     pointer-events: none
     user-select: none
-    z-index: -1
+    z-index: 1
     transition: $all
+
+.section .container
+  z-index: 2
+  position: relative
