--- a/packages/website/src/sass/sections/_section-integration.sass
+++ b/packages/website/src/sass/sections/_section-integration.sass
@@ -19,12 +19,7 @@
     mask-size: 65% 60%
     mask-position: 100% 50%
     mask-repeat: no-repeat
-    z-index: 1
     animation: gridAnimation 20s linear infinite
-
-.section--integration .container
-  z-index: 2
-  position: relative
 
 .integration
   display: flex
